--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
     "express": "~4.15.5",
+    "express-mysql-session": "^1.2.3",
+    "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "moment": "^2.19.3",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "nodemon": "^1.12.1",
+    "passport": "^0.4.0",
     "pug": "2.0.0-beta11",
     "serve-favicon": "~2.4.5"
   }
